checkstyle and errors